Update agrirouter-middleware-business/src/main/java/de/agrirouter/middleware/business/TimeLogService.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>